--- a/q/275853.html
+++ b/q/275853.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>018</td><td>05AB1E</td><td>240930T085501Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275883#275883">Kevin Cr</a></td></tr>
-<tr d-ix="1"><td>036</td><td>K ngn/k</td><td>240930T041013Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275876#275876">akamayu</a></td></tr>
-<tr d-ix="2"><td>010</td><td>Nekomata</td><td>240929T080511Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275867#275867">alephalp</a></td></tr>
+<tr d-ix="0"><td>010</td><td>Nekomata</td><td>240929T080511Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275867#275867">alephalp</a></td></tr>
+<tr d-ix="1"><td>018</td><td>05AB1E</td><td>240930T085501Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275883#275883">Kevin Cr</a></td></tr>
+<tr d-ix="2"><td>036</td><td>K ngn/k</td><td>240930T041013Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275876#275876">akamayu</a></td></tr>
 <tr d-ix="3"><td>034</td><td>Charcoal</td><td>240928T184702Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275858#275858">Neil</a></td></tr>
 <tr d-ix="4"><td>086</td><td>Arturo</td><td>240928T231918Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275864#275864">chunes</a></td></tr>
 <tr d-ix="5"><td>085</td><td>JavaScript Node.js</td><td>240928T222801Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275863#275863">l4m2</a></td></tr>
@@ -37,7 +37,39 @@
 <tr d-ix="8"><td>016</td><td>Jelly</td><td>240928T190640Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275859#275859">Unrelate</a></td></tr>
 <tr d-ix="9"><td>060</td><td>R</td><td>240928T182326Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275856#275856">pajonk</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 18 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a>, 10 bytes</h1>
+<pre><code>ᵑʰ→:ṁ7ᵃc∙Å
+</code></pre>
+
+<p>-2 bytes thanks to <a href="https://codegolf.stackexchange.com/users/85334/unrelated-string">@Unrelated String</a>.</p>
+<p>This requires <a href="https://github.com/AlephAlpha/Nekomata/releases/tag/v0.7.0.0" rel="nofollow noreferrer">Nekomata v0.7.0.0</a>, which is not yet on ATO.</p>
+<p>Takes input as <code>z [a,b,c]</code>.</p>
+<pre><code>ᵑʰ→:ṁ7ᵃc∙Å
+ᵑ               Apply the following function z times:
+ ʰ→               Increment any element of the list [a,b,c]
+   :            Duplicate
+    ṁ           Minimum
+     7          Push 7
+      ᵃ         Apply the following function to both the minimum and 7:
+       c          Prepend to the duplicated list
+        ∙       Dot product
+         Å      Find the largest possible value
+</code></pre>
+<p><code>ʰ</code> (<code>\onAny</code>) is a new built-in particle in Nekomata v0.7.0.0. It applies a function to any element of a list non-deterministically.</p>
+<hr />
+<h2><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> v0.6.0.0, 12 bytes</h2>
+<pre><code>3$ŧĦ+:ṁ7ᵃc∙Å
+</code></pre>
+<p>-2 bytes thanks to <a href="https://codegolf.stackexchange.com/users/85334/unrelated-string">@Unrelated String</a>.</p>
+<p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFZtJJurlLsgqWlJWm6FluNVY4uP7JM2-rhzkbzh1ubkx91zDzcuqQ4KbkYqmLBzYsGCtEGOqY6BrFcYJaBjlkslyGymLGOkY4hmGUCZxnrGMNZRjpGYB0IdaZIOoyR9ELUmWCRNdYxQTIZZh6aXoQs1F5juL1AMSOYCyA-AwA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<pre><code>3$ŧĦ+
+3$ŧ     Find a z-tuple of [0,1,2]
+   Ħ    Histogram; count the occurrences of each of 0, 1, 2
+    +   Add that to [a,b,c]
+</code></pre>
+<p>The other part is the same as the previous solution.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 18 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>2ÝIãε2Ý¢+W7*snO+}à
 </code></pre>
 <p>Two separated inputs: <span class="math-container">\$z\$</span> and <span class="math-container">\$[a,b,c]\$</span>.</p>
@@ -60,43 +92,11 @@
                  # (which is output implicitly as result)
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 36 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 36 bytes</h1>
 <p>Find the max in all base cases. It takes two inputs <code>a,b,c</code> as a vector and <code>z</code>.</p>
 <pre><code>{|/(7*&amp;/'k)+/'k*k:x+/:(y=+/')#+!3#3}
 </code></pre>
 <p><a href="https://ngn.codeberg.page/k#eJxLs6qu0dcw11LTV8/W1AYSWtlWFdr6VhqVtkCeprK2orGycS0XV1q0gY6CqY6CgbWCQSyEB0RmCB5EzhDEM9ZRMNJRMITKmaDwgHLGKDygnBEKzxBqiim6KcboZhqh22CIqRLINEG33QjdLYaYZmKoBMoZo7sa1bdGsQAyL0XA" rel="nofollow noreferrer">Try it online!</a></p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a>, 10 bytes</h1>
-<pre><code>ᵑʰ→:ṁ7ᵃc∙Å
-</code></pre>
-
-<p>-2 bytes thanks to <a href="https://codegolf.stackexchange.com/users/85334/unrelated-string">@Unrelated String</a>.</p>
-<p>This requires <a href="https://github.com/AlephAlpha/Nekomata/releases/tag/v0.7.0.0" rel="nofollow noreferrer">Nekomata v0.7.0.0</a>, which is not yet on ATO.</p>
-<p>Takes input as <code>z [a,b,c]</code>.</p>
-<pre><code>ᵑʰ→:ṁ7ᵃc∙Å
-ᵑ               Apply the following function z times:
- ʰ→               Increment any element of the list [a,b,c]
-   :            Duplicate
-    ṁ           Minimum
-     7          Push 7
-      ᵃ         Apply the following function to both the minimum and 7:
-       c          Prepend to the duplicated list
-        ∙       Dot product
-         Å      Find the largest possible value
-</code></pre>
-<p><code>ʰ</code> (<code>\onAny</code>) is a new built-in particle in Nekomata v0.7.0.0. It applies a function to any element of a list non-deterministically.</p>
-<hr />
-<h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a>, 12 bytes</h1>
-<pre><code>3$ŧĦ+:ṁ7ᵃc∙Å
-</code></pre>
-<p>-2 bytes thanks to <a href="https://codegolf.stackexchange.com/users/85334/unrelated-string">@Unrelated String</a>.</p>
-<p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFZtJJurlLsgqWlJWm6FluNVY4uP7JM2-rhzkbzh1ubkx91zDzcuqQ4KbkYqmLBzYsGCtEGOqY6BrFcYJaBjlkslyGymLGOkY4hmGUCZxnrGMNZRjpGYB0IdaZIOoyR9ELUmWCRNdYxQTIZZh6aXoQs1F5juL1AMSOYCyA-AwA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<pre><code>3$ŧĦ+
-3$ŧ     Find a z-tuple of [0,1,2]
-   Ħ    Histogram; count the occurrences of each of 0, 1, 2
-    +   Add that to [a,b,c]
-</code></pre>
-<p>The other part is the same as the previous solution.</p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 34 bytes</h1>
 <pre><code>⊞υＥ³ＮＦＮＦ⮌υＦ³⊞υＥκ⁺μ⁼λνＩ⌈Ｅυ⁺ΣＸι²×⁷⌊ι
@@ -176,10 +176,10 @@ a\[j-1]            ; to a[j-1]
 </code></pre>
 <p><a href="https://tio.run/##fZJBboMwEEX3OcWsIhscFNuBREVOV132BBEL40CTiuIKaFVR9ezUDg0BAhXIgnl//h9GvMpPWari/F6tcn1MmiYVSJKYKFKTQjAs9vXjs6xO3pv8QimSLm3himJSLJcpsm/Sik0FP0hHurETu8pR7tZpG89564ib8LAAOJhrTcAn9lxDRID55rwRcwd/hAcD0vbQMeHGwpSvbvRGNkOyG/TwHrlzY9cJ6EQOHRN/kMO3gwl6OZyPZ@tydhNT0wky42bKm1nCeznBxA7uNjo/279u7AJnCJv4nm6j7EoWkZfq4kmqE0JWIQnEBBSB2ir0RwURBrGHb@OQJRUUSQkCzI/Z6XBokNJ5qbPEy/QLMpJLJ2nFwj4b0Q8Om18" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 18 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="noreferrer">Vyxal</a>, 18 bytes</h1>
 <pre><code>3Þ□↔Ṡ$v+ƛ²∑ng7*+;G
 </code></pre>
-<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCIzw57ilqHihpThuaAkdivGm8Ky4oiRbmc3Kis7RyIsIiIsIjFcbls0LCAyLCAxXSJd" rel="nofollow noreferrer">Try it Online!</a></p>
+<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCIzw57ilqHihpThuaAkdivGm8Ky4oiRbmc3Kis7RyIsIiIsIjFcbls0LCAyLCAxXSJd" rel="noreferrer">Try it Online!</a></p>
 <p>This is a little ugly due to vyxal's vectorisation being silly, but it works.</p>
 <pre><code>   ↔               # Combinations of length z of
 3Þ□                # Rows of 3x3 identity matrix
