--- a/q/275871.html
+++ b/q/275871.html
@@ -26,20 +26,63 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>106</td><td>JavaScript Node.js</td><td>240930T063843Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275877#275877">l4m2</a></td></tr>
-<tr d-ix="1"><td>027</td><td>Jelly</td><td>240929T210108Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275872#275872">Unrelate</a></td></tr>
-<tr d-ix="2"><td>142</td><td>Python 3.8 prerelease</td><td>240929T212142Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275874#275874">squarero</a></td></tr>
-<tr d-ix="3"><td>025</td><td>Charcoal</td><td>240929T211400Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275873#275873">Neil</a></td></tr>
+<tr d-ix="0"><td>025</td><td>Charcoal</td><td>240929T211400Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275873#275873">Neil</a></td></tr>
+<tr d-ix="1"><td>105</td><td>JavaScript Node.js</td><td>240930T063843Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275877#275877">l4m2</a></td></tr>
+<tr d-ix="2"><td>027</td><td>Jelly</td><td>240929T210108Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275872#275872">Unrelate</a></td></tr>
+<tr d-ix="3"><td>142</td><td>Python 3.8 prerelease</td><td>240929T212142Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275874#275874">squarero</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 106 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 25 bytes</h1>
+<pre><code>Ｆ²ＦＬθ«Ｊκ⁻¹＆⊕κ±⊕κ¿ι§θκＰ^±ⅉ
+</code></pre>
+<p><a href="https://tio.run/##XU67DoIwFJ3hK@54m@Cgo0y4YcQ4uLiYNHCBhtJCe/ER47dXZHDwLCc5r5yyla60UodQWwe4EbDwgUzDLY5CwCuO9lM/nC12CRTKTB7XCewU35WnzFSYm9JRT4apwk4kcKRGMv3JX6RxpGpAJeDklGHMODcVPXBMYA6kQNoTFJNmNSz@9vobu@DSf4fArfJMnkvpqZVe6uXprDp@WkNhddMf" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
+<pre><code>Ｆ²
+</code></pre>
+<p>Loop twice.</p>
+<pre><code>ＦＬθ«
+</code></pre>
+<p>Loop over each input character index.</p>
+<pre><code>Ｊκ⁻¹＆⊕κ±⊕κ
+</code></pre>
+<p>Jump to that character's position.</p>
+<pre><code>¿ι
+</code></pre>
+<p>On the second pass, ...</p>
+<pre><code>§θκ
+</code></pre>
+<p>... output the character.</p>
+<pre><code>Ｐ^⁻¹ⅉ
+</code></pre>
+<p>On the first pass, draw <code>/</code> and <code>\</code> diagonals down to the bottom line.</p>
+<p>Due to a bug in Charcoal, replacing <code>⁻¹</code> with <code>±</code> results in an extra trailing line of spaces. This bug also then prevents me from drawing the entire diagram one column to the right, otherwise for 17 bytes:</p>
+<pre><code>→ＦＳ«Ｊⅈ±＆ⅈ±ⅈＰ^±⊘ⅉι
+</code></pre>
+<p><a href="https://tio.run/##VYzBCsIwEETP7Vf0uAH9gfakJxUqoh70Iix1TRZiUpJtRcRvj1FEcE6Pmcd0BkPn0abU@pGg3rI2opry4kMFS9cPspPAToNS1aMsVsO133s4gJpUa9IoBHOWG0eaufNfnfmdpizawQr3@USgPv32BdqRznCEr7X5CJzxmZIYjkJROoxkMKIlp8XkNsjdO0rT0b4A" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
+<pre><code>→
+</code></pre>
+<p>Start with the first character in column <code>1</code>.</p>
+<pre><code>ＦＳ«
+</code></pre>
+<p>Loop over each input character.</p>
+<pre><code>Ｊⅈ±＆ⅈ±ⅈ
+</code></pre>
+<p>Jump to that character's position.</p>
+<pre><code>Ｐ^±⊘ⅉ
+</code></pre>
+<p>Draw <code>/</code> and <code>\</code> diagonals halfway to the bottom (without moving the cursor).</p>
+<pre><code>ι
+</code></pre>
+<p>Output the current character.</p>
+<p>(I do have an experimental branch where this version should print correctly with no padding.)</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 105 bytes</h1>
 
-<pre class="lang-javascript prettyprint-override"><code>s=&gt;(g=i=&gt;s[i++*2]?g(i)+s.map(c=&gt;(++j&amp;-j)==i?(g=2*i,c):(x=j&amp;g-1)-i?x+i^g?' ':'\\':'/',j=0).join``+`
+<pre class="lang-javascript prettyprint-override"><code>s=&gt;(g=i=&gt;s[i++*2]?g(i)+s.map(c=&gt;(++j&amp;-j)^i?(x=j&amp;g-1)-i?x+i^g?' ':'\\':'/':(g=2*i,c),j=0).join``+`
 `:'')``
 </code></pre>
-<p><a href="https://tio.run/##DcrBEoIgFEDRfV/RygciVC5tkA9RGwiVHik40TT@Pbm5m3O9@ZlkP7h9eYjjlGeZk2yJkyjb1CFjZT0oR5CyJFazEXsgY77gnkqJ6hjrEitLG7JLXzh@oxzVzvDhFJyhgb4/coHKyysVPmLQmumTbgCo1vluY0hxmcQSHZlJJ4QA87TjNLsX@veyhggDpfkP" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##DczNEoIgFEDhfU/RKrgiVC5tkAfxZyBUuqTgRNP49uTmbL6Z483PJPvB7ctDHKc8y5xkQ51E2aQWGSuqXjmKwJJYzUbtgYz5C/cwoKK79BfH78BR7QwHp8iZ1KTrjlxJfWyqAksLpZc3ED5i0Jrpk64JAa3zw8aQ4jKJJTo601YIQczTjtPsXujfyxoi6QHyHw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Actually I don't understand ...</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>31</s> <s>28</s> 27 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>31</s> <s>28</s> 27 bytes</h1>
 <pre><code>Jm2BỊḄJ=&amp;ɗⱮJḤṚ|Ɗị&quot;Ø^;;⁶Ʋ€UZ
 </code></pre>
 <p><a href="https://tio.run/##fY4/S8NQFMX39zFEzd61FNStmRWJg3BNbvJe@/6Ud2@MEZeKINQPoLi4iJMIikil0CVQ8GMkXyS@0cnlwrnn8DtnglrXfR@bwUG7WrTLm3i0@3Pfvb/F7fK5/X682iza1d1W83A6HHbzr81Hd/16dNK3q8/mNtkOYtLN10L0PYizNBMy4FzlBASBeSHVZKqNdYKlIkbiFAglEGi0Bcvw9Vw7iyL0Ny/t8mkQWnf2mnU8igN7@78NiTj8A1UElXSzmbIFqQuuWXrEVIKHlNGTdrZQZCNmCQwGLkMujAViP6aoNMxaeoXWTUmxhSLkc0wy50qqfLjnOsuCGyGPC8B9TjiXx6okl2tvnTYlpNbWzk3ZyAKND21lVPPYTUyJhFxVFpxlyxCxR9JSV/Uv" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -66,37 +109,13 @@ Jm2BỊḄ              This creates a bitmask for the period of that column.
           Z    and transpose.
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 158 </s> <s> 144 </s> <s> 143 </s> 142 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 158 </s> <s> 144 </s> <s> 143 </s> 142 bytes</h1>
 <p><em>-14 bytes by Unrelated String.</em><br />
 <em>-2 bytes by emanresu A.</em></p>
 
 <pre class="lang-python prettyprint-override"><code>t=lambda s:(r:=len(s)//2)and[l.center(r-~r)for l in[s[r]]+[f'/{&quot; &quot;*i}\\'for i in range(1,r,2)]]+[*map(' '.join,zip(t(s[:r]),t(s[r+1:])))]or[s]
 </code></pre>
 <p><a href="https://tio.run/##JcpBDoMgEEDRqxA3gLUa7aYx8STIAhUViwMZ2LRNe3Wq6e4n//lnXB3c7h5Tip1V@zApElqGbWc1sMCrquEKJmHLUUPUyPD6RT47JJYYEEGglBcx0@qdkSw3n76n5zTHJKhg0awusGj4qfJdeUYJLTdnoHgZzyILokXJizPwUreScy4diiCTRwOR0R7@/rBUDeOk52U128Pu4OiB0w8" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="noreferrer">Charcoal</a>, 25 bytes</h1>
-<pre><code>Ｆ²ＦＬθ«Ｊκ⁻¹＆⊕κ±⊕κ¿ι§θκＰ^±ⅉ
-</code></pre>
-<p><a href="https://tio.run/##XU67DoIwFJ3hK@54m@Cgo0y4YcQ4uLiYNHCBhtJCe/ER47dXZHDwLCc5r5yyla60UodQWwe4EbDwgUzDLY5CwCuO9lM/nC12CRTKTB7XCewU35WnzFSYm9JRT4apwk4kcKRGMv3JX6RxpGpAJeDklGHMODcVPXBMYA6kQNoTFJNmNSz@9vobu@DSf4fArfJMnkvpqZVe6uXprDp@WkNhddMf" rel="noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
-<pre><code>Ｆ²
-</code></pre>
-<p>Loop twice.</p>
-<pre><code>ＦＬθ«
-</code></pre>
-<p>Loop over each input character index.</p>
-<pre><code>Ｊκ⁻¹＆⊕κ±⊕κ
-</code></pre>
-<p>Jump to that character's position.</p>
-<pre><code>¿ι
-</code></pre>
-<p>On the second pass, ...</p>
-<pre><code>§θκ
-</code></pre>
-<p>... output the character.</p>
-<pre><code>Ｐ^⁻¹ⅉ
-</code></pre>
-<p>On the first pass, draw <code>/</code> and <code>\</code> diagonals down to the bottom line.</p>
-<p>Due to a bug in Charcoal, replacing <code>⁻¹</code> with <code>±</code> results in an extra trailing line of spaces.</p>
 </div>
 
 <table id="st">
