--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20241002T163803Z
+"   /golfscore                                      20241002T172204Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/156967.html">Non-discriminating Programming                  : 0156967</a>
 <a href="q/89283.html">Print an alphabet wave                          : 0089283</a>
 <a href="q/275815.html">Randomly color the words                        : 0275815</a>
 <a href="q/275871.html">Draw a string as a binary tree                  : 0275871</a>
