--- a/q/191180.html
+++ b/q/191180.html
@@ -26,18 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>036</td><td>Wolfram Language Mathematica</td><td>190902T205724Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/191183#191183">att</a></td></tr>
-<tr d-ix="1"><td>nan</td><td>x8664  26 Bytes</td><td>190911T054928Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/192625#192625">me&#39;</a></td></tr>
-<tr d-ix="2"><td>033</td><td>Haskell</td><td>190911T053854Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/192624#192624">Jo King</a></td></tr>
-<tr d-ix="3"><td>036</td><td>Haskell</td><td>190911T042630Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/192623#192623">xnor</a></td></tr>
-<tr d-ix="4"><td>091</td><td>C</td><td>190903T040102Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/191202#191202">girobuz</a></td></tr>
-<tr d-ix="5"><td>073</td><td>Befunge98 PyFunge</td><td>190905T104536Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/191341#191341">david</a></td></tr>
-<tr d-ix="6"><td>057</td><td>C clang</td><td>190904T084029Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/191283#191283">AZTECCO</a></td></tr>
-<tr d-ix="7"><td>015</td><td>Retina</td><td>190902T213917Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/191187#191187">mbomb007</a></td></tr>
-<tr d-ix="8"><td>006</td><td>Stax</td><td>190902T224607Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/191191#191191">Oliver</a></td></tr>
-<tr d-ix="9"><td>027</td><td>C# Visual C# Interactive Compiler</td><td>190902T232037Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/191193#191193">Gymhgy</a></td></tr>
-<tr d-ix="10"><td>765</td><td>Stax</td><td>190903T164221Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/191231#191231">Joshua</a></td></tr>
-<tr d-ix="11"><td>040</td><td>Perl 5 MListUtil=sum pF/R/</td><td>190903T054358Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/191204#191204">Xcali</a></td></tr>
+<tr d-ix="0"><td>031</td><td>Perl 5 MListUtil=sum pF/R/</td><td>190903T054358Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/191204#191204">Xcali</a></td></tr>
+<tr d-ix="1"><td>036</td><td>Wolfram Language Mathematica</td><td>190902T205724Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/191183#191183">att</a></td></tr>
+<tr d-ix="2"><td>nan</td><td>x8664  26 Bytes</td><td>190911T054928Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/192625#192625">me&#39;</a></td></tr>
+<tr d-ix="3"><td>033</td><td>Haskell</td><td>190911T053854Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/192624#192624">Jo King</a></td></tr>
+<tr d-ix="4"><td>036</td><td>Haskell</td><td>190911T042630Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/192623#192623">xnor</a></td></tr>
+<tr d-ix="5"><td>091</td><td>C</td><td>190903T040102Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/191202#191202">girobuz</a></td></tr>
+<tr d-ix="6"><td>073</td><td>Befunge98 PyFunge</td><td>190905T104536Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/191341#191341">david</a></td></tr>
+<tr d-ix="7"><td>057</td><td>C clang</td><td>190904T084029Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/191283#191283">AZTECCO</a></td></tr>
+<tr d-ix="8"><td>015</td><td>Retina</td><td>190902T213917Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/191187#191187">mbomb007</a></td></tr>
+<tr d-ix="9"><td>006</td><td>Stax</td><td>190902T224607Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/191191#191191">Oliver</a></td></tr>
+<tr d-ix="10"><td>027</td><td>C# Visual C# Interactive Compiler</td><td>190902T232037Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/191193#191193">Gymhgy</a></td></tr>
+<tr d-ix="11"><td>765</td><td>Stax</td><td>190903T164221Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/191231#191231">Joshua</a></td></tr>
 <tr d-ix="12"><td>007</td><td>Pyth</td><td>190903T132434Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/191217#191217">ar4093</a></td></tr>
 <tr d-ix="13"><td>032</td><td>Java 11</td><td>190903T075556Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/191209#191209">Kevin Cr</a></td></tr>
 <tr d-ix="14"><td>005</td><td>Jelly</td><td>190902T202144Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/191181#191181">Erik the</a></td></tr>
@@ -55,13 +55,19 @@
 <tr d-ix="26"><td>059</td><td>Python 2</td><td>190902T213403Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/191186#191186">Chas Bro</a></td></tr>
 <tr d-ix="27"><td>006</td><td>Jelly</td><td>190902T211933Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/191185#191185">Nick Ken</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>43</s> <s>38</s> 36 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-MList::Util=sum -pF/R/</code>, <s>40</s> 31 bytes</h1>
+
+<pre class="lang-perl prettyprint-override"><code>$_=sum map y///c,@F,@F[1..@F-2]
+</code></pre>
+<p><a href="https://tio.run/##K0gtyjH9/18l3ra4NFchN7FAoVJfXz9Zx8ENiKIN9fQc3HSNYv//19MLAqN/@QUlmfl5xf91fX0yi0usrEJLMnNAeoECpnoGhgb/dQvc9IP0AQ" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>43</s> <s>38</s> 36 bytes</h1>
 <pre><code>Subsequences/*Count[{0,1..}|{1..,0}]
 </code></pre>
 <p><a href="https://tio.run/##y00syUjNTSzJTE78n2b7P7g0qTi1sDQ1Lzm1WF/LOb80ryS62kDHUE@vtqYaSOoY1Mb@DyjKBAor69qlOSjHquk7VHNVG@oAFemASBA0rNUBCoEIAzABkwILQzgwJkzOEKpJBw5ruWr/AwA" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/191192/81203">Neil's Retina solution</a>. Uses 1 for spaces and 0 for rooks.</p>
 </div>
-<div id="pu1" class="pu"><h1>x86-64 - 26 Bytes</h1>
+<div id="pu2" class="pu"><h1>x86-64 - 26 Bytes</h1>
 
 <p>Input is an array of up to 32 bits and an integer representing number of squares, 1 representing rook, 0 representing empty.</p>
 
@@ -95,7 +101,7 @@ C3                   ret
 
 <p>Copies the bits into the next significant byte and removes the trailing zero bits. Then gets number of leading zero bits and subtracts it from the total number of zero bits.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 33 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 33 bytes</h1>
 
 
 
@@ -109,7 +115,7 @@ t=snd.span(&gt;0)
 
 <p>This uses GHC 8.4.1 or later to have access to the <code>&lt;&gt;</code> operator without importing it.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 36 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 36 bytes</h1>
 
 
 
@@ -120,7 +126,7 @@ t=snd.span(&gt;0)
 
 <p>Uses 1 for empty space, 0 for rook. Counts the number of 1's not in an initial block of ones, and adds that to the result for the reversed string.</p>
 </div>
-<div id="pu4" class="pu"><h2><a href="https://en.wikipedia.org/wiki/C_%28programming_language%29" rel="nofollow noreferrer">C</a>, <strike>183</strike> <strike>156</strike> <strike>151</strike> <s>137</s> <s>96</s> 91 bytes</h2>
+<div id="pu5" class="pu"><h2><a href="https://en.wikipedia.org/wiki/C_%28programming_language%29" rel="nofollow noreferrer">C</a>, <strike>183</strike> <strike>156</strike> <strike>151</strike> <s>137</s> <s>96</s> 91 bytes</h2>
 
 <p>Thanks to ceilingcat for 91 bytes.</p>
 
@@ -131,7 +137,7 @@ t=snd.span(&gt;0)
 
 <p><a href="https://tio.run/##BcFLDoIwEADQu5CY9DNt7E6ZjNyhW@MCpgN2IZrKqgSvXt9jtzC3xpBAkJ9jMRWm@/WBrzGvSu/zu6hFtq@qNGkUMvV2CQM7EvNLkCjAuRcbwFhbUeOn5HWbVXfKHbClNEjvWOPRmo/exxj9Hw" rel="nofollow noreferrer">TIO</a></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://pythonhosted.org/PyFunge/" rel="nofollow noreferrer">Befunge-98 (PyFunge)</a>, 73 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://pythonhosted.org/PyFunge/" rel="nofollow noreferrer">Befunge-98 (PyFunge)</a>, 73 bytes</h1>
 
 <pre><code>#;ep10fp#;&gt;#v~:'.-#v_$1+0k
 v0+ge0*gf0$_v#!-R':&lt;
@@ -140,7 +146,7 @@ v0+ge0*gf0$_v#!-R':&lt;
 
 <p><a href="https://tio.run/##S0pNK81LT9W1tNAtqAQz//9Xtk4tMDRIK1C2tlMuq7NS19NVLotXMdQ2yOYqM9BOTzXQSk8zUIkvU1bUDVK3suGySy0wAipXUFAoU7AzSEs31NUySE3X1nP4/18vSE8vKChIDwA" rel="nofollow noreferrer" title="Befunge-98 (PyFunge) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu6" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 57 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 57 bytes</h1>
 
 
 
@@ -164,7 +170,7 @@ Now it works! Plus saved some bytes!</p>
 
 <p>adds -r- for every space(rook met guaranteed )</p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language" rel="nofollow noreferrer">Retina</a>, <s>23</s> 15 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language" rel="nofollow noreferrer">Retina</a>, <s>23</s> 15 bytes</h1>
 
 <p>Double the number of spaces between rooks, grep lines with at least one rook, then count the number of spaces.</p>
 
@@ -180,7 +186,7 @@ G`R
 
 <p>I was hoping I could use overlapping matches with <code>(?&lt;=R.*) | (?=.*R)</code>, but overlaps aren't quite that aggressive. It would need to count all possible ways a match could be obtained in order to return the correct result with that method.</p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://github.com/tomtheisen/stax" rel="nofollow noreferrer">Stax</a>, <s>7</s> 6 <a href="https://github.com/tomtheisen/stax/blob/master/docs/packed.md#packed-stax" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu9" class="pu"><h1><a href="https://github.com/tomtheisen/stax" rel="nofollow noreferrer">Stax</a>, <s>7</s> 6 <a href="https://github.com/tomtheisen/stax/blob/master/docs/packed.md#packed-stax" rel="nofollow noreferrer">bytes</a></h1>
 
 <p>-1 byte thanks to recursive</p>
 
@@ -189,7 +195,7 @@ G`R
 
 <p><a href="https://staxlang.xyz/#p=b9897ca288e3&amp;i=%22+R++RRR+%22%0A%22+%22%0A%22R%22%0A%22R++RR%22%0A%22+++R%22%0A%22++R++R++%22%0A%22++++++%22&amp;m=2" rel="nofollow noreferrer">Run and debug it</a></p>
 </div>
-<div id="pu9" class="pu"><h1><a href="http://www.mono-project.com/docs/about-mono/releases/5.0.0/#csc" rel="nofollow noreferrer">C# (Visual C# Interactive Compiler)</a>, 27 bytes</h1>
+<div id="pu10" class="pu"><h1><a href="http://www.mono-project.com/docs/about-mono/releases/5.0.0/#csc" rel="nofollow noreferrer">C# (Visual C# Interactive Compiler)</a>, 27 bytes</h1>
 
 
 
@@ -200,7 +206,7 @@ G`R
 
 <p><a href="https://tio.run/##RcyxCsIwEIDhvU9x3HSHNbpKTUYf4BRcutQklYBNJUmlbx@hDq4f/L/Ne5tDvSzRnnNJIT7bEIsZdV21oXW3srqlMBGr6zKR08bx4VS75jMHB8XnQr8KHvOQHIM2cE@heBppEyX@/RqsJxRsAfsj8p8AW@wLMnPXNNsMQQBEBJC7@gU" rel="nofollow noreferrer" title="C# (Visual C# Interactive Compiler) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://github.com/tomtheisen/stax" rel="nofollow noreferrer">Stax</a>, <STRIKE>7</STRIKE> <STRIKE>6</STRIKE> 5 <a href="https://github.com/tomtheisen/stax/blob/master/docs/packed.md#packed-stax" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu11" class="pu"><h1><a href="https://github.com/tomtheisen/stax" rel="nofollow noreferrer">Stax</a>, <STRIKE>7</STRIKE> <STRIKE>6</STRIKE> 5 <a href="https://github.com/tomtheisen/stax/blob/master/docs/packed.md#packed-stax" rel="nofollow noreferrer">bytes</a></h1>
 
 <pre><code>àσQ█ε
 </code></pre>
@@ -208,15 +214,6 @@ G`R
 <p><a href="https://staxlang.xyz/#p=85e551dbee&amp;i=%22%09R%09%09RRR%09%22%0A%22%09%22%0A%22R%22%0A%22R%09%09RR%22%0A%22%09%09%09R%22%0A%22%09%09R%09%09R%09%09%22%0A%22%09%09%09%09%09%09%22&amp;m=2" rel="nofollow noreferrer">Run and debug it</a></p>
 
 <p>Use tab for empty square and any other character for rook.</p>
-</div>
-<div id="pu11" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-MList::Util=sum -pF/R/</code>, 40 bytes</h1>
-
-
-
-<pre class="lang-perl prettyprint-override"><code>$\=2*sum map$_=y///c,@F}{$\-="@F"+$F[-1]
-</code></pre>
-
-<p><a href="https://tio.run/##K0gtyjH9/18lxtZIq7g0VyE3sUAl3rZSX18/WcfBrbZaJUbXVsnBTUlbxS1a1zD2/389vSAw@pdfUJKZn1f8X9fXJ7O4xMoqtCQzxxZoBFDAVM/A0OC/boGbfpA@AA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu12" class="pu"><h1><a href="https://github.com/isaacg1/pyth" rel="nofollow noreferrer">Pyth</a>, 7 bytes</h1>
 
