--- a/q/191180.html
+++ b/q/191180.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>031</td><td>Perl 5 MListUtil=sum pF/R/</td><td>190903T054358Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/191204#191204">Xcali</a></td></tr>
+<tr d-ix="0"><td>040</td><td>Perl 5 MListUtil=sum pF/R/</td><td>190903T054358Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/191204#191204">Xcali</a></td></tr>
 <tr d-ix="1"><td>036</td><td>Wolfram Language Mathematica</td><td>190902T205724Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/191183#191183">att</a></td></tr>
 <tr d-ix="2"><td>nan</td><td>x8664  26 Bytes</td><td>190911T054928Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/192625#192625">me&#39;</a></td></tr>
 <tr d-ix="3"><td>033</td><td>Haskell</td><td>190911T053854Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/192624#192624">Jo King</a></td></tr>
@@ -55,11 +55,11 @@
 <tr d-ix="26"><td>059</td><td>Python 2</td><td>190902T213403Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/191186#191186">Chas Bro</a></td></tr>
 <tr d-ix="27"><td>006</td><td>Jelly</td><td>190902T211933Z</td><td><a href="https://codegolf.stackexchange.com/questions/191180/count-rook-moves-1d/191185#191185">Nick Ken</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-MList::Util=sum -pF/R/</code>, <s>40</s> 31 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-MList::Util=sum -pF/R/</code>, 40</h1>
 
-<pre class="lang-perl prettyprint-override"><code>$_=sum map y///c,@F,@F[1..@F-2]
+<pre class="lang-perl prettyprint-override"><code>$_=/R/*sum map y///c,@F,@F[1..@F-2+/R$/]
 </code></pre>
-<p><a href="https://tio.run/##K0gtyjH9/18l3ra4NFchN7FAoVJfXz9Zx8ENiKIN9fQc3HSNYv//19MLAqN/@QUlmfl5xf91fX0yi0usrEJLMnNAeoECpnoGhgb/dQvc9IP0AQ" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##K0gtyjH9/18l3lY/SF@ruDRXITexQKFSX18/WcfBDYiiDfX0HNx0jbT1g1T0Y///D9LT0wv6l19QkpmfV/xf19cns7jEyiq0JDPHFqgbKGCqZ2Bo8F@3wA1oIAA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>43</s> <s>38</s> 36 bytes</h1>
 <pre><code>Subsequences/*Count[{0,1..}|{1..,0}]
