--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20241002T235726Z
+"   /golfscore                                      20241003T002534Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/275909.html">Pad approximant of \$\exp(x)\$                  : 0275909</a>
 <a href="q/89283.html">Print an alphabet wave                          : 0089283</a>
 <a href="q/275739.html">Print 4 billion if statements                   : 0275739</a>
 <a href="q/275906.html">Simplified canvas builtin                       : 0275906</a>
