--- a/q/275909.html
+++ b/q/275909.html
@@ -26,13 +26,21 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>015</td><td>Uiua 0.13.0dev.2</td><td>241003T002534Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275910#275910">Tbw</a></td></tr>
+<tr d-ix="0"><td>045</td><td>JavaScript ES11</td><td>241003T025930Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275911#275911">Arnauld</a></td></tr>
+<tr d-ix="1"><td>015</td><td>Uiua 0.13.0dev.2</td><td>241003T002534Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275910#275910">Tbw</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua 0.13.0-dev.2</a>, <sup><strike></strike></sup>15 bytes <sup><a href="https://tinyurl.com/Uiua-SBCS-Sep-23" rel="nofollow noreferrer" title="SBCS for Uiua 0.13.0">SBCS</a></sup></h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES11), 45 bytes</h1>
+<p>Expects <code>(n)(k)</code> as BigInts and returns the corresponding coefficient.</p>
+
+<pre class="lang-javascript prettyprint-override"><code>n=&gt;k=&gt;(F=n=&gt;n?n*F(~-n):1n)(n+n-k)/F(k)/F(n-k)
+</code></pre>
+<p><a href="https://tio.run/##NY3BDoIwEETvfsWG09ZKlatQvPETxkODrUKbLQH0YvDXa0vksDuzmTfZXr3V1I7dMOfk7zoYGUjWVtbYyGjoQvsGvzmxc0EMiVNu2bHBdSUfjB/R6RkIJJyojFpBsRrOGXx2AClVMb3eynhtvP3zFioJSTccQInhNT3RYPxoGUutJU7rafJOC@cfqETvO8LsAFkClvAD" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua 0.13.0-dev.2</a>, <sup><strike></strike></sup>15 bytes <sup><a href="https://tinyurl.com/Uiua-SBCS-Sep-23" rel="nofollow noreferrer" title="SBCS for Uiua 0.13.0">SBCS</a></sup></h1>
 <pre><code>÷∩/×+1⊃⇡-:+1+⇡.
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_13_0-dev_2__Mgo0CsO34oipL8OXKzHiioPih6EtOisxK-KHoS4K" rel="nofollow noreferrer">Try on Uiua Pad!</a></p>
-<p>Takes <span class="math-container">\$n\$</span> and <span class="math-container">\$k\$</span> and outputs the coefficient of <span class="math-container">\$x^k\$</span> in the numerator of the <span class="math-container">\$n\$</span>th approximant.</p>
+<p>Takes <span class="math-container">\$n\$</span> and <span class="math-container">\$k\$</span> and outputs the coefficient of <span class="math-container">\$x^k\$</span> in the numerator of the <span class="math-container">\$n\$</span>th approximant. This is <span class="math-container">\$\frac{(2n-k)!}{k!(n-k!)}\$</span>.</p>
 </div>
 
 <table id="st">
