--- a/q/275909.html
+++ b/q/275909.html
@@ -26,17 +26,24 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>015</td><td>Uiua 0.13.0dev.2</td><td>241003T002534Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275910#275910">Tbw</a></td></tr>
-<tr d-ix="1"><td>018</td><td>Charcoal</td><td>241003T055940Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275912#275912">Neil</a></td></tr>
-<tr d-ix="2"><td>045</td><td>JavaScript ES11</td><td>241003T025930Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275911#275911">Arnauld</a></td></tr>
+<tr d-ix="0"><td>012</td><td>APLDyalog Unicode</td><td>241003T083724Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275913#275913">akamayu</a></td></tr>
+<tr d-ix="1"><td>015</td><td>Uiua 0.13.0dev.2</td><td>241003T002534Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275910#275910">Tbw</a></td></tr>
+<tr d-ix="2"><td>018</td><td>Charcoal</td><td>241003T055940Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275912#275912">Neil</a></td></tr>
+<tr d-ix="3"><td>045</td><td>JavaScript ES11</td><td>241003T025930Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275911#275911">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua 0.13.0-dev.2</a>, <sup><strike></strike></sup>15 bytes <sup><a href="https://tinyurl.com/Uiua-SBCS-Sep-23" rel="nofollow noreferrer" title="SBCS for Uiua 0.13.0">SBCS</a></sup></h1>
+<div id="pu0" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>12 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
+<p>Assumes <code>⎕io←0</code>. It takes <code>n</code> and <code>k</code> as its left and right arguments, respectively, then outputs the coefficient of <span class="math-container">\$x^k\$</span> in the <span class="math-container">\$n\$</span>-th approximant.</p>
+<pre><code>(!⊣+-)÷-×⍥!⊢
+</code></pre>
+<p><a href="https://razetime.github.io/APLgolf/?h=e9Q3NTP/UdsEA64QIFn9qHcXkHrUtfhRd8ujrmYQX0ddQV3nUe/WWn0gRwHIACIQpf6obZK6BkRsFxht1axVUAAA&amp;c=01B81LVYW1fz8Hbdw9Mf9S4FchcBAA&amp;f=K1F41DZBIU0hREE9TZ3rUdtEICp51LP/0IpHvTsedczQe9S59FEvkLPZEgA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua 0.13.0-dev.2</a>, <sup><strike></strike></sup>15 bytes <sup><a href="https://tinyurl.com/Uiua-SBCS-Sep-23" rel="nofollow noreferrer" title="SBCS for Uiua 0.13.0">SBCS</a></sup></h1>
 <pre><code>÷∩/×+1⊃⇡-:+1+⇡.
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_13_0-dev_2__Mgo0CsO34oipL8OXKzHiioPih6EtOisxK-KHoS4K" rel="nofollow noreferrer">Try on Uiua Pad!</a></p>
 <p>Takes <span class="math-container">\$n\$</span> and <span class="math-container">\$k\$</span> and outputs the coefficient of <span class="math-container">\$x^k\$</span> in the numerator of the <span class="math-container">\$n\$</span>th approximant. This is <span class="math-container">\$\frac{(2n-k)!}{k!(n-k)!}\$</span>.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 18 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 18 bytes</h1>
 <pre><code>ＮθＮηＩ÷Π⁻⊕…θ⊗θηΠ⊕…η
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iOSOxKDk_MWfBgqWlJWm6Fje7PfMKSkv8SnOTUos0CjWtuZD5GUB-QFFmXomGc2JxiYZnXolLZllmSqpGQFF-SmlyiYZvZl5pMVA8uSg1NzWvJDVFIygxLz1Vo1BHwSW_NCkHKFCoqamjkAHEMD2YqjM0wcB6SXFScjHUYcujlXTLcpRiF5soGEFEAA" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code. Explanation: Uses the same formula from @Tbw's answer.</p>
@@ -59,7 +66,7 @@
                     Implicitly print
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1>JavaScript (ES11), 45 bytes</h1>
+<div id="pu3" class="pu"><h1>JavaScript (ES11), 45 bytes</h1>
 <p>Expects <code>(n)(k)</code> as BigInts and returns the corresponding coefficient.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>n=&gt;k=&gt;(F=n=&gt;n?n*F(~-n):1n)(n+n-k)/F(k)/F(n-k)
