--- a/q/275906.html
+++ b/q/275906.html
@@ -26,10 +26,17 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>003</td><td>05AB1E</td><td>241003T095245Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275916#275916">Kevin Cr</a></td></tr>
-<tr d-ix="1"><td>007</td><td>Charcoal</td><td>241002T215157Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275907#275907">Neil</a></td></tr>
+<tr d-ix="0"><td>219</td><td>Python 3</td><td>241003T121136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275918#275918">Jitse</a></td></tr>
+<tr d-ix="1"><td>003</td><td>05AB1E</td><td>241003T095245Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275916#275916">Kevin Cr</a></td></tr>
+<tr d-ix="2"><td>007</td><td>Charcoal</td><td>241002T215157Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275907#275907">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 3 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 219 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>f=lambda d,s,p={},c=0,S=sorted,T=(-1,1j-1,1j,1j+1,1,1-1j,-1j,-1j-1,0):s and f(d[1:],s[1:],{**p,c:s[0]},c+T[[*d,8][0]])or'\n'.join(''.join(p.get(x+y*1j,' ')for y in S({i.imag for i in p}))for x in S({i.real for i in p}))
+</code></pre>
+<p><a href="https://tio.run/##bU/bjsIgEH3fr2B9KW2nbqm3jUm/Qh826fYBe1uMQgNkV6N@e5eOjVEjB2aAc@bAtEf7o@Sk6@p0x/ebkpMSDLTp6QJFGsMqNUrbqoR1SiMGbIvBzdBlYJHbD8sRsb80hMuS1LTM2DIHg/EUBC0US5PFuTMN11kWlPCZu2PuK@19S2@8VUJSb8jtuKksPYTHwDl7xPNrpcmRCElW9CTGYs8b0l@J/qq9@Mgfbryu@O6R71otpKU1zfDTwHIgI96Pke@/3ZEJTGAKM5jDopeowvJGyfcHVeIUd6vXGcuFLripnuxuQBFBPHldETvMHaZXP/Vb6T8trJDNC/kUvzjDgjmWMne6cv0OLcIoCs/hB6avPrlwfjBzPWJpgl1PnmwXiHiwZ4MuwUZaofnudXQvdP8" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 3 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>2ŠΛ
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f/f6OiCc7P//4820gFBEyA0BUIzMDQAQkMgDyIHYpnEcmnr6mrXaOuDqQgQBSRqAA" rel="nofollow noreferrer">Try it online.</a></p>
@@ -43,7 +50,7 @@
      # (after which the result is output immediately implicitly)
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 7 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 7 bytes</h1>
 <pre><code>ＧＨ✳✳Ａ²Ｓ
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iOSOxKDk_MWfBgqWlJWm6FjdNA_JzKtPz8zzyc3LyyzVcMotSk0sy8_OKNTzzCkpLNDQ1dRSMdBTAnOCSosy8dKCQ9ZLipORiqBHLo5V0y3KUYm86R0cb6ICgGRCaAqEJGBoBoSGQB5EDscxidZS0dXW1a7T1wVQEiAISNUqxECMB" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code. Explanation: <code>PolygonHollow</code> is Charcoal's path text writing function. It has two modes of operation, one where each direction and path length is specified and one where there is an array of directions and a fixed path length. Here <code>Directions</code> is used to specify an array expression as the directions. However <code>PolygonHollow</code> takes <code>0</code> as right and <code>2</code> as up, so I have amended the test case appropriately. The path length of <code>2</code> is inclusive so that each subsequent step draws one additional character.</p>
