--- a/q/275906.html
+++ b/q/275906.html
@@ -26,15 +26,15 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>203</td><td>Python 3</td><td>241003T121136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275918#275918">Jitse</a></td></tr>
+<tr d-ix="0"><td>201</td><td>Python 3</td><td>241003T121136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275918#275918">Jitse</a></td></tr>
 <tr d-ix="1"><td>003</td><td>05AB1E</td><td>241003T095245Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275916#275916">Kevin Cr</a></td></tr>
 <tr d-ix="2"><td>007</td><td>Charcoal</td><td>241002T215157Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275907#275907">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 203 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 201 bytes</h1>
 
-<pre class="lang-python prettyprint-override"><code>f=lambda d,s,p={},c=0,S=sorted,T=(-1,1j-1,1j,1j+1,1,1-1j,-1j,-1j-1,0):s and f(d[1:],s[1:],{**p,c:s[0]},c+T[[*d,8][0]])or[[p.get(x+y*1j,' ')for y in S({i.imag for i in p})]for x in S({i.real for i in p})]
+<pre class="lang-python prettyprint-override"><code>f=lambda d,s,p={},c=0,X={0},Y={0},S=sorted,T=(-1,1j-1,1j,1j+1,1,1-1j,-1j,-1j-1,0):s and f(d[1:],s[1:],{**p,c:s[0]},c+T[[*d,8][0]],X|{c.real},Y|{c.imag})or[[p.get(x+y*1j,' ')for y in S(Y)]for x in S(X)]
 </code></pre>
-<p><a href="https://tio.run/##bVHbboMwDH3nK7K@QMB0QG8TEl/RPkxCPGSQskwUUJJtrdp@O3NCL@s0TJzY5/gQm/6g37t2NgzbrGG7t4qRChT02fEMZRbBOlOd1LyCTeaFMcQf1uEb4A5xiOfLQiCiqSKsrcjWq/I4LUBZf/T9HspU5VGBosEmz/0KXgoMC9rJPO@nNdfePjj4qOQSl247SQ5EtGTtHcVU7FhNTEqYVH@mhQn2N1xy1jzig@ZKK5IRzyHEy@1NIS6ATJh5JhQu@QRmMIcFLGFl0K7UrO7apyshQfDXMhSlmZAlU/wucjOLE2t3hdEitCXafFTpvrj8lkKLtn5kzu11Fpa7tFUxRiNmTrY6CMPgFDzb7dVs6E5XHWzFViW2udkfxZW16KIcX3iJvXkvJGv@9xPqUMcxM64A28Mx2wmn@EXJ1Wejcdb4z0FRzBhaI1puaCOakl6KVnu@SaMA7zPXNdQxTYcf" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##bVHNboMwDL7zFFkvEDAd0L8JiadoD0yIQwYpY6KAkmxrRfvszAntuk3DxI7tz19ipz@p165djOM@adjhpWSkBAl9MlygSAJIkyG4wLPR20R2QvESdonjhxC@GYW/hxZCH/fXhYmAxpKwtiR7p8zCOAdp9OC6PRSxzIIcD/B2WeaW8JSjm0N6Hoq54KzBA/W2PrDqQjuRZf284so5eicX@W1i030nyInULdk6zzTX3nHyUpqPikslSUIcixAnM3eDMAcyY/qbUbjGI1jAElawho3OdoViVdc@3AARJn8sDZGK1aJgkt9JvsXkiZE7wyQByhplObF0H1x8ilrVbfUbuTTXWRns2lSF6E05vTPVnu97Z@/RmFQbVOcbD7ZiqiLT3OIP48ZIcGUOr7jI3LyvBWv@1zNqUcvSQy4B28M5mwnHeKLg8r1ROGt8ZZAUIxrW1C3XsCkbk17UrXJcHUYC3ie2raFTmI5f" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 <p>Returns a 2D array of characters</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 3 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
