--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20241003T132902Z
+"   /golfscore                                      20241003T133202Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/64785.html">When is Thanksgiving?                           : 0064785</a>
 <a href="q/275906.html">Simplified canvas builtin                       : 0275906</a>
 <a href="q/275909.html">Pad approximant of \$\exp(x)\$                  : 0275909</a>
 <a href="q/89283.html">Print an alphabet wave                          : 0089283</a>
